--- a/Housing Project/PySpark Tutorial.ipynb
+++ b/Housing Project/PySpark Tutorial.ipynb
@@ -41,8 +41,7 @@
    "source": [
     "# a SparkSession object can perform the most common data processing tasks\n",
     "from pyspark.sql import SparkSession\n",
-    "spark = SparkSession.builder.appName('test').getOrCreate() # will return existing session if one was\n",
-    "                                                           # created before and was not closed"
+    "spark = SparkSession.builder.appName('test').getOrCreate() # will return existing session if one wac                                                  # created before and was not closed"
    ]
   },
   {
